# sonarcute

./: Makefile  README.md
api/: DOCUMENTATION.md  README.md  SYSTEM_DESIGN.md
api/src/sonarqube/: client.rs  handlers.rs
api/src/web/: server.rs
deploy/compose/: docker-base-compose.yml
deploy/compose/initdb/: init.sql
deploy/scripts/: quality_gate_setup.sh
sonar-mochi/: .gitignore  Cargo.toml  MIGRATION_GUIDE.md  PROJECT_STATUS.md  README.md  SYSTEM_DESIGN.md
sonar-mochi/migration/: Cargo.toml  README.md
sonar-mochi/migration/src/: lib.rs  m20251103_135616_create_reviews_tables.rs
sonar-mochi/src/: main.rs
sonar-mochi/src/ai/: mod.rs  ollama.rs  prompt.rs  provider.rs
sonar-mochi/src/config/: mod.rs
sonar-mochi/src/database/: mod.rs
sonar-mochi/src/database/entities/: ai_model.rs  integration.rs  mod.rs  review.rs  review_comment.rs  review_history.rs  review_template.rs  template.rs
sonar-mochi/src/database/repositories/: mod.rs  review_repository.rs
sonar-mochi/src/integrations/: github.rs  jira.rs  mod.rs
sonar-mochi/src/models/: mod.rs  review.rs
sonar-mochi/src/services/: context.rs  git.rs  mod.rs  review.rs
sonar-mochi/src/utils/: encryption.rs  mod.rs  validation.rs
sonar-mochi/src/web/: middleware.rs  mod.rs  server.rs
sonar-mochi/src/web/handlers/: ai_models.rs  health.rs  integrations.rs  mod.rs  reviews.rs  templates.rs
web/src/components/: AddProjectModal.tsx
web/src/services/: api.ts
web/src/types/: api.ts
