[package]
name = "sonar-mochi"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.11.0"
actix-cors = "0.7.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Configuration
dotenvy = "0.15"

# Database
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json"] }

# Git operations
git2 = { version = "0.20.2", default-features = false }

# Async runtime (actix-web uses tokio)
tokio = { version = "1", features = ["full"] }

# Encryption for credentials
aes-gcm = "0.10"
base64 = { version = "0.22", features = ["default"] }

# Environment variables
dotenv = "0.15"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# URL parsing
url = "2.5"

# String utilities
regex = "1.10"

# Async streams
futures = "0.3"

# Async traits
async-trait = "0.1"

